<resources>
    <string name="app_name">Yoda</string>
    <string name="title_activity_act_create_time_box">Create TimeBox</string>
    <string name="action_settings">Settings</string>
    <string name="tvObjectiveActAddNewGoal">Objective</string>
    <string name="edtObjectiveHintActAddNewGoal">Where do you want to go?</string>
    <string name="tvKeyResultActAddNewGoal">Key Result</string>
    <string name="edtKeyResultHintActAddNewGoal">How are you going to get there?</string>
    <string name="tvTimeActAddNewGoal">Time</string>
    <string name="edtTimeHintActAddNewGoal">How much time do you want to spend on this goal?</string>
    <string name="tvNickNameActAddNewGoal">Nick Name</string>
    <string name="edtNickNameHintActAddNewGoal">Nick name for goal</string>
    <string name="btnAdvancedActAddNewGoal">Advanced</string>
    <string name="btnHideAdvancedActAddNewGoal">Advanced ^</string>
    <string name="tvGoalReasonActAddNewGoal">Reason</string>
    <string name="edtGoalReasonHintActAddNewGoal">Why do you want to do this?</string>
    <string name="tvGoalRewardActAddNewGoal">Reward</string>
    <string name="edtGoalRewardHintActAddNewGoal">How will you reward yourself on accomplishing this?</string>
    <string name="tvGoalBuddyActAddNewGoal">Buddy</string>
    <string name="edtGoalBuddyHintActAddNewGoal">Pick a Buddy to keep informed about your progress?</string>
    <string name="titleActAddNewGoal">New Goal</string>
    <string name="actionSaveActAddNewGoal">Save</string>
    <string name="msgGoalSavedActAddNewGoal">Goal has been created and has</string>
    <string name="msgEnterGoalNickNameActAddNewGoal">Please Enter Goal Nick Name</string>
    <string name="msgGoalNickNameExistsActAddNewGoal">This Goal already exists</string>
    <string name="titleActAddNewStep">New Step</string>
    <string name="actionSaveActAddNewStep">Save</string>
    <string name="msgEnterStepNameActAddNewStep">Please Enter Step Name</string>
    <string name="msgStepNameExistsActAddNewStep">This Step already exists</string>
    <string name="msgNoEmailIdAttached">This contact does not have an email id.\nPlease select another.</string>
    <string name="tvStepNameActAddNewStep">Nick Name</string>
    <string name="edtStepNameHintActAddNewStep">eg. Read Newspaper</string>
    <string name="allowableCharactersForStep">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 1234567890</string>
    <string name="tvStepNotesActAddNewStep">Notes</string>
    <string name="edtStepNotesHintActAddNewStep">Enter Notes Here</string>
    <string name="tvGoalNameActAddNewStep">Goal Name</string>
    <string name="edtGoalNameHintActAddNewStep">Select Goal</string>
    <string name="btnAdvancedActAddNewStep">Advanced</string>
    <string name="btnHideAdvancedActAddNewStep">Advanced ^</string>
    <string name="tvStepTypeActAddNewStep">Step Type</string>
    <string name="edtStepTypeHintActAddNewStep">Select Step Type</string>
    <string name="tvPriorityActAddNewStep">Priority</string>
    <string name="edtPriorityHintActAddNewStep">Select Priority</string>
    <string name="tvSingleStepTimeActAddNewStep">How long would it take to do this?(Hrs)</string>
    <string name="tvStepsInSeriesActAddNewStep">No of steps in series</string>
    <string name="tvTimeForEachStepActAddNewStep">Time for each step in series (Hrs)</string>
    <string name="tvExpirOrNotActAddNewStep">Expire after due date?</string>
    <string name="addNewTimeBoxSpinnerItemActAddNewGoal">Add New Time Box</string>
    <string name="addNewGoalSpinnerItemActAddNewStep">Add New Goal</string>
    <string name="tvDefaultStepDurationActSettingsDefaultDuration">Default Step Duration (Hrs)</string>
    <string name="tvDefaultSessionDurationActSettingsDefaultDuration">Default Session Duration (Hrs)</string>
    <string name="tvDefaultYodaSaysNotificationActSettingsDefaultDuration">Default Yoda Says Notification (Hrs)</string>
    <string name="tvDefaultExportToCalendarActSettingsDefaultDuration">Default Export to Calendar Period (Days)</string>
    <string name="tvDefaultPriorityOfNewStepActSettingsDefaultDuration">Default Priority of New Step</string>
    <string name="tvDefaultBehaviourForPassedStepsActSettingsDefaultDuration">Default Behaviour for Passed Steps</string>
    <string name="titleActSettingDefaultDuration">Settings</string>
    <string name="rbDontExpireActSettingsDefaultDuration">Do Not Expire</string>
    <string name="rbExpireActSettingsDefaultDuration">Expire</string>
    <string name="rbBottomMostActSettingsDefaultDuration">Bottom-most</string>
    <string name="rbTopMostActSettingsDefaultDuration">Top-most</string>
    <string name="titleActChangeStepPriority">Change Step Priority</string>
    <string name="tvEmptyViewActStepList">No Steps to show</string>
    <string name="tvEmptyViewPendingStepsActStepList">No Pending Steps to show</string>
    <string name="tvEmptyViewActGoalList">No Goal to show</string>
    <string name="actionSave">Save</string>
    <string name="titleActCeateTimeBox">New TimeBox</string>
    <string name="label_when_act_create_time_box">When</string>
    <string name="rb_early_morning_act_create_time_box">Early Morning</string>
    <string name="rb_morning_act_create_time_box">Morning</string>
    <string name="rb_afternoon_act_create_time_box">Afternoon</string>
    <string name="rb_evening_act_create_time_box">Evening</string>
    <string name="rb_night_act_create_time_box">Night</string>
    <string name="rb_late_night_act_create_time_box">Late Night</string>
    <string name="label_on_act_create_time_box">On</string>
    <string name="rb_daily_act_create_time_box">Daily</string>
    <string name="rb_weekly_act_create_time_box">Weekly</string>
    <string name="rb_monthly_act_create_time_box">Monthly</string>
    <string name="rb_quarterly_act_create_time_box">Quarterly</string>
    <string name="rb_yearly_act_create_time_box">Yearly</string>
    <string name="label_till_act_create_time_box">Until</string>
    <string name="rb_week_act_create_time_box">Week</string>
    <string name="rb_month_act_create_time_box">Month</string>
    <string name="rb_quarter_act_create_time_box">Quarter</string>
    <string name="rb_year_act_create_time_box">Year</string>
    <string name="rb_forever_act_create_time_box">Forever</string>
    <string name="cb_act_create_timebox_onweekly_sun">S</string>
    <string name="cb_act_create_timebox_onweekly_mon">M</string>
    <string name="cb_act_create_timebox_onweekly_tue">T</string>
    <string name="cb_act_create_timebox_onweekly_wed">W</string>
    <string name="cb_act_create_timebox_onweekly_thu">T</string>
    <string name="cb_act_create_timebox_onweekly_fri">F</string>
    <string name="cb_act_create_timebox_onweekly_sat">S</string>
    <string name="cb_act_create_timebox_on_monthly_1week">1st Week</string>
    <string name="cb_act_create_timebox_on_monthly_2week">2nd Week</string>
    <string name="cb_act_create_timebox_on_monthly_3week">3rd Week</string>
    <string name="cb_act_create_timebox_on_monthly_4week">4th Week</string>
    <string name="cb_act_create_timebox_on_monthly_3month">3rd Month</string>
    <string name="cb_act_create_timebox_on_monthly_2month">2nd Month</string>
    <string name="cb_act_create_timebox_on_monthly_1month">1st Month</string>
    <string name="cb_act_create_timebox_on_yearly_jan">Jan</string>
    <string name="cb_act_create_timebox_on_yearly_feb">Feb</string>
    <string name="cb_act_create_timebox_on_yearly_mar">Mar</string>
    <string name="cb_act_create_timebox_on_yearly_apr">Apr</string>
    <string name="cb_act_create_timebox_on_yearly_may">May</string>
    <string name="cb_act_create_timebox_on_yearly_jun">Jun</string>
    <string name="cb_act_create_timebox_on_yearly_jul">Jul</string>
    <string name="cb_act_create_timebox_on_yearly_aug">Aug</string>
    <string name="cb_act_create_timebox_on_yearly_sep">Sep</string>
    <string name="cb_act_create_timebox_on_yearly_oct">Oct</string>
    <string name="cb_act_create_timebox_on_yearly_nov">Nov</string>
    <string name="cb_act_create_timebox_on_yearly_dec">Dec</string>
    <string name="label_summary_act_create_time_box">Summary</string>
    <string name="actionEditActGoalDetails">Edit</string>
    <string name="titleActGoalList">My Goals</string>
    <string name="actionEdit">Edit</string>
    <string name="tvEmptyViewActTimeBoxList">No TimeBoxes to show</string>
    <string name="actionAdd">Add</string>
    <string name="titleActTimeBoxList">My TimeBoxes</string>
    <string name="titleActAddNewTimeBoxEdit">Edit TimeBox</string>
    <string name="btnSetWallpaperActSettingsChangeWallpaper">Set Wallpaper</string>
    <string name="msgActCreateTimeBoxSelectWhenTime">Select at least one \'When\' time</string>
    <string name="msgActCreateTimeBoxSelectOnTime">Select \'On\' time</string>
    <string name="msgActCreateTimeBoxSelectTillTime">Select \'Until\' time</string>
    <string name="titleActFilters">My Lists</string>
    <string name="msgActAddNewGoalTimeBoxNotApplicable">Selected TimeBox overlaps with one of the active TimeBoxes. Please choose a different TimeBox</string>
    <string name="tvEmptyViewFragFilter">No Steps</string>
    <string name="msgCannotSaveStepActAddNewStep">The step cannot be scheduled in the time you have allocated for the Goal. You will have to add time to the TimeBox if you really want to get this done.</string>
    <string name="msgYodaSays">YodA say\'s:</string>
    <string name="btnOk">Ok</string>
    <string name="tvCompletedActNowFilter">Did it - Another step closer!</string>
    <string name="tvDoingItActNowFilter">Doing it - Check back in 5 mins.</string>
    <string name="tvMissedActNowFilter">Missed it - Because…</string>
    <string name="tvEmptyViewActNowFilter">No step scheduled at this time</string>
    <string name="btnQuickStartActQuickStart">Quick Start</string>
    <string name="btnNewStepActQuickStart">Start Afresh</string>
    <string name="btnImportTaskActQuickStart">Import Tasks</string>
    <string name="subtitleNewStepActQuickStart"><![CDATA[Create your own goals & steps]]></string>
    <string name="subtitleImportTaskActQuickStart"><![CDATA[Import tasks from Google & sync them with Yoda]]></string>
    <string name="subtitleQuickStartActQuickStart"><![CDATA[Quick start with predefined goals & steps. You can edit these later.]]></string>
    <string name="actionToggleSteps">Toggle Steps</string>
    <string name="titlePendingStepsActStepsList">Pending Steps</string>
    <string name="timeSpinnerHintActAddNewGoal">Select a TimeBox</string>
    <string name="label_pick_color_act_create_time_box">Pick a color</string>
    <string name="msgSelectTimeBoxActAddNewGoal">Please select a TimeBox</string>
    <string name="crashToast">Yoda Crashed. Error will be reported.</string>
    <string name="findContact">Search in Contacts</string>
    <string name="save">SAVE</string>
    <string name="discard">DISCARD</string>
    <string name="accounts">Accounts</string>
    <string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    <string name="refresh">Refresh</string>
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>
    <string name="btnResetYodaActSettingsDefaultDuration">Reset Application</string>
    <string name="label_loading_act_splash_screen">Loading...</string>
    <string name="label_comapny_info1">YodA - You can DO Anything</string>
    <string name="label_comapny_info2">© Grey Labs, LLP. All Rights Reserved.</string>
    <string name="edtExcuseDialogueExcuse">What\'s your excuse</string>
    <string name="btnLogDialogueExcuse">Log</string>
    <string name="btnCancelDialogueExcuse">Cancel</string>
    <string name="titleDialogueExcuse">Log Excuse</string>
    <string name="tvAddNewGoalActHome">New Goal</string>
    <string name="titleActAutoSync">Auto Sync</string>
</resources>