<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llActCreateTimeBoxOnYearly"
    android:visibility="gone"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlyJan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_jan"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlyFeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_feb"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlyMar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_mar"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlyApr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_apr"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlyMay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_may"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlyJun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_jun"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlyJul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_jul"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlyAug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_aug"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlySep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_sep"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlyOct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_oct"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlyNov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_nov"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />

        <CheckBox
            android:id="@+id/cbActCreateTimeBoxOnYearlyDec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_act_create_timebox_on_yearly_dec"
            android:checked="false"
            android:layout_weight="1"
            style="@style/RadioButtonStyle"
            android:textColor="@drawable/selector_radio_btn_text" />
    </LinearLayout>

</LinearLayout>