<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/llActCreateTimeBoxOnWeekly"
    android:visibility="gone" >

    <CheckBox
        android:id="@+id/cbActCreateTimeBoxOnWeeklySun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_act_create_timebox_onweekly_sun"
        android:checked="false"
        android:layout_weight="1"
        style="@style/RadioButtonStyle"
        android:textColor="@drawable/selector_radio_btn_text" />

    <CheckBox
        android:id="@+id/cbActCreateTimeBoxOnWeeklyMon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_act_create_timebox_onweekly_mon"
        android:checked="false"
        android:layout_weight="1"
        style="@style/RadioButtonStyle"
        android:textColor="@drawable/selector_radio_btn_text" />

    <CheckBox
        android:id="@+id/cbActCreateTimeBoxOnWeeklyTue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_act_create_timebox_onweekly_tue"
        android:checked="false"
        android:layout_weight="1"
        style="@style/RadioButtonStyle"
        android:textColor="@drawable/selector_radio_btn_text" />

    <CheckBox
        android:id="@+id/cbActCreateTimeBoxOnWeeklyWed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_act_create_timebox_onweekly_wed"
        android:checked="false"
        android:layout_weight="1"
        style="@style/RadioButtonStyle"
        android:textColor="@drawable/selector_radio_btn_text" />

    <CheckBox
        android:id="@+id/cbActCreateTimeBoxOnWeeklyThu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_act_create_timebox_onweekly_thu"
        android:checked="false"
        android:layout_weight="1"
        style="@style/RadioButtonStyle"
        android:textColor="@drawable/selector_radio_btn_text" />

    <CheckBox
        android:id="@+id/cbActCreateTimeBoxOnWeeklyFri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_act_create_timebox_onweekly_fri"
        android:checked="false"
        android:layout_weight="1"
        style="@style/RadioButtonStyle"
        android:textColor="@drawable/selector_radio_btn_text" />

    <CheckBox
        android:id="@+id/cbActCreateTimeBoxOnWeeklySat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_act_create_timebox_onweekly_sat"
        android:checked="false"
        android:layout_weight="1"
        style="@style/RadioButtonStyle"
        android:textColor="@drawable/selector_radio_btn_text" />

</LinearLayout>