<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionEditActGoalList"
        android:title="@string/actionEdit"
        android:icon="@drawable/ic_btn_edit_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionAddActGoalList"
        android:title="@string/actionAdd"
        android:icon="@drawable/ic_btn_add_white"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/actionSaveActGoalList"
        android:title="@string/actionSave"
        android:icon="@drawable/ic_btn_save_act_add_new_goal"
        app:showAsAction="ifRoom"
        android:visible="false" />

</menu>