<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
        <!--android:id="@+id/actionEditActStepList"-->
        <!--android:title="@string/actionEdit"-->
        <!--android:icon="@drawable/ic_btn_edit_white"-->
        <!--app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/actionSaveActStepList"
        android:title="@string/actionSaveActAddNewGoal"
        android:icon="@drawable/ic_btn_save_act_add_new_goal"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/actionAddActStepList"
        android:title="@string/actionAdd"
        android:icon="@drawable/ic_btn_add_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionToggleActStepList"
        android:title="@string/actionToggleSteps"
        android:icon="@drawable/ic_btn_toggle_act_step_list"
        app:showAsAction="ifRoom" />

</menu>