<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/llActCreateTimeBoxOnQuarterly"
    android:visibility="gone"
    >

    <CheckBox
        android:id="@+id/cbActCreateTimeBoxOnQuarterly1Month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_act_create_timebox_on_monthly_1month"
        android:checked="false"
        android:layout_weight="1"
        style="@style/RadioButtonStyle"
        android:textColor="@drawable/selector_radio_btn_text" />

    <CheckBox
        android:id="@+id/cbActCreateTimeBoxOnQuarterly2Month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_act_create_timebox_on_monthly_2month"
        android:checked="false"
        android:layout_weight="1"
        style="@style/RadioButtonStyle"
        android:textColor="@drawable/selector_radio_btn_text" />

    <CheckBox
        android:id="@+id/cbActCreateTimeBoxOnQuarterly3Month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_act_create_timebox_on_monthly_3month"
        android:checked="false"
        android:layout_weight="1"
        style="@style/RadioButtonStyle"
        android:textColor="@drawable/selector_radio_btn_text" />
</LinearLayout>