<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlActSplashScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottomLLActSplashScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_comapny_info1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_comapny_info2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:gravity="center_horizontal"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llActSplashScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/ivActSplashScreen"
                android:contentDescription="Y.Do Logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/ic_launcher_large" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_loading_act_splash_screen"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:gravity="center_horizontal"
            android:layout_below="@id/llActSplashScreen" />
    </RelativeLayout>
</RelativeLayout>