<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:id="@+id/rlQuickStartActQuickStart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@color/ColorPrimary"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btnQuickStartActQuickStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/ic_btn_quick_start_act_quick_start" />
        <!--android:text="@string/btnQuickStartActQuickStart"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/btnQuickStartActQuickStart"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnQuickStartActQuickStart"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/subtitleQuickStartActQuickStart"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlNewStepActQuickStart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@color/background_btnnewstepactquickstart" >

        <Button
            android:id="@+id/btnNewStepActQuickStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_btn_new_step_act_quick_start"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/btnNewStepActQuickStart"
            android:layout_centerVertical="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNewStepActQuickStart"
                android:textSize="30sp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/subtitleNewStepActQuickStart"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlImportTaskActQuickStart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@color/background_btnimporttaskactquickstart"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btnImportTaskActQuickStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/ic_btn_import_act_quick_start" />
        <!--android:text="@string/btnQuickStartActQuickStart"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/btnImportTaskActQuickStart"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnImportTaskActQuickStart"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/subtitleImportTaskActQuickStart"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>